html/css/style.css
/* ... */
.devel-page {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.devel-page .mlist {
    position: fixed;
    top: 80px;
    left: 8px;
    bottom: 8px;
    width: 200px;

    background: #2e2e2e;
    padding: 10px 0;

    box-shadow: inset 0px 13px 15px -10px rgba(0,0,0,1),
                inset 0px -13px 15px -10px rgba(0,0,0,1),
                inset 13px 0px 15px -10px rgba(0,0,0,1),
                inset -13px 0px 15px -10px rgba(0,0,0,1);
}

.devel-page .mlist > a {
    display: block;
    padding: 3px 8px;
    text-decoration: none;

    color: #eee;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.devel-page .mlist > a:hover {
    color: #fff;
}

.devel-page .mlist > a.active {
    color: #fff;
    background: rgb(110, 130, 200);
    box-shadow: inset 0px 0px 15px -10px rgba(0,0,0,1),
                inset 0px 0px 15px -10px rgba(0,0,0,1),
                inset 13px 0px 15px -10px rgba(0,0,0,1),
                inset -13px 0px 15px -10px rgba(0,0,0,1)
}

.devel-page .content-pane {
    position: absolute;
    top: 0;
    left: 200px;
    width: calc(100% - 200px);
    height: 100%;

    overflow: hidden;
}

.devel-page .logo-box {
    position: absolute;
    top: 0;
    left: 0px;
    width: 214px;

    padding: 5px;
}

.logo-box .mod-btn {
    margin: 0px;
}

.devel-page .mod-value {
    margin-left: 10px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.devel-page select.form-control.mod-version {
    height: 25px;
    width: 100px;
    border-radius: 0px;
    padding: 0px;
    display: inline;
    margin-left: 5px;
}

.devel-page span.version-link {
    word-wrap: break-word;
}

.devel-page .form-box {
    position: absolute;
    top: 0;
    left: 220px;
    bottom: 0;

    width: calc(100% - 220px);
}

.devel-page .tabcorner {
    background-image: url(../images/tabbox-corner.png);
    height: 61px;
    width: 61px;
    position: fixed;
    left: 366px;

}

.devel-page .dev-tabbox {
    background-color: #1c1c1c;
    height: 61px;
    padding-left: 5px;
    box-shadow: 0px 7px 15px 0px rgba(0,0,0,1);

}

.devel-page .form-content {
    position: absolute;
    top: 60px;
    left: 0;
    bottom: 0;
    width: 100%;
    overflow-x: hidden;
}

.devel-page .form-group img {
    max-width: 100%;
    max-height: 150px;
}

.devel-page .dev-tabbar {
    overflow: hidden;
    position: relative;
    height: 28px;
    background-color: #1c1c1c;
    box-shadow: inset 0px -1px 0px 0px rgba(0,0,0,1)
}

.devel-page .dev-tabbar > a {
    text-decoration: none !important;
    color: #fff !important;
    background-image: url(../images/tabedge-i.png);
    display: inline-block;
    padding: 6px;
    padding-left: 10px;

    width: 150px;
    height: 30px;
}

.devel-page .dev-tabbar > a.active {
    background-image: url(../images/tabedge-a.png);
}

.devel-page .dev-tabbar-arrows {
    position: absolute;
    right: 0;
    top: 0;
    margin-top: 7px;
    margin-right: 5px;
}

.devel-page .dev-tabbar-arrows a {
    color: #fff;
}

.devel-page .table td {
    padding: 2px;
}

